[package]
name = "libparsec_client_high_level_api"
version = "0.0.0"
edition = "2021"
license = " BUSL-1.1"

[features]
test-utils = ["libparsec_testbed"]

[dependencies]
libparsec_crypto = { workspace = true }
libparsec_platform_async = { workspace = true }
libparsec_platform_device_loader = { workspace = true }
libparsec_protocol = { workspace = true }
libparsec_types = { workspace = true }

libparsec_testbed = { workspace = true, optional = true }

once_cell = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

# TODO: fix wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libparsec_client = { workspace = true }
