[package]
name = "libparsec_client_high_level_api"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"

[features]
test-utils = ["libparsec_testbed"]

[dependencies]
libparsec_crypto = { path = "../crypto" }
libparsec_platform_async = { path = "../platform_async" }
libparsec_platform_device_loader = { path = "../platform_device_loader" }
libparsec_protocol = { path = "../protocol" }
libparsec_types = { path = "../types" }

libparsec_testbed = { path = "../testbed", optional = true }

once_cell = "1.17.1"
thiserror = "1.0.40"

# TODO: fix wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libparsec_client = { path = "../client" }
