[package]
name = "libparsec_crypto"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
license-file.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-unsecure-but-fast-secretkey-from-password = []
use-sodiumoxide = [
    "dep:sodiumoxide",
    "dep:libsodium-sys",
    "dep:openssl",
]
# In theory we should have this feature enabling optional dependencies,
# but instead we consider use-rustcrypto as the default (see below)
# use-rustcrypto = [
#     "dep:argon2",
#     "dep:blake2",
#     "dep:crypto_box",
#     "dep:digest",
#     "dep:ed25519-dalek",
#     "dep:generic-array",
#     "dep:getrandom_01",
#     "dep:getrandom_02",
#     "dep:lazy_static",
#     "dep:rand_07",
#     "dep:rand_08",
#     "dep:rsa",
#     "dep:sha1",
#     "dep:sha2",
#     "dep:x25519-dalek",
#     "dep:xsalsa20poly1305",
# ]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true, features = ["std"] }
hex = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
base32 = { workspace = true }
# `alloc` feature is required to properly erase struct containing vec/string
zeroize = { workspace = true, features = ["alloc"] }

#
# SodiumOxide&friends stuff
#

sodiumoxide = { workspace = true, optional = true, features = ["std", "serde"] }
libsodium-sys = { workspace = true, optional = true }
openssl = { workspace = true, optional = true, features = ["vendored"] }

#
# RustCrypto stuff
#
# Note that, unlike sodiumoxide related ones, those dependencies are not
# marked optional. This is a glorious hack to ease dev workflow \o/
#
# The idea is that in dev we want to compile by default with rustcrypto.
# On top of that we also want to be able to compile any crate depending on this
# one and use rustcrypto.
#
# The straightforward solution would be to set a `default = ["use-rustcrypto"]`
# feature here, however this clashes with feature unification: any crate
# depending on this one implicitly enable `use-rustcrypto` feature unless it
# specify `no-default = true` (which defeat the whole point of having a default !).
#
# So the solution is instead to consider `use-rustcrypto` is set whenever
# `use-sodiumoxide` is not.
# But then we have another problem: `use-rustcrypto` have itself dependencies.
# The solution is simple: we always enable those dependencies.
# (Hence in the end `use-rustcrypto` feature has no existence here as it is
# just the negation of `use-sodiumoxide`)
#
# But what about the perf ??? Well compilation is a bit longer with `use-sodiumoxide`
# but at link time all the rustcrypto related code is discarded given it is never used.

argon2 = { workspace = true, features = ["alloc", "password-hash", "rand"] }  # Optional ruscrypto dep
blake2 = { workspace = true, features = ["std"] }  # Optional ruscrypto dep
crypto_box = { workspace = true, features = ["std"] }  # Optional ruscrypto dep
digest = { workspace = true, features = ["core-api"] }  # Optional ruscrypto dep
ed25519-dalek = { workspace = true, features = ["std", "rand", "u64_backend"] }  # Optional ruscrypto dep
generic-array = { workspace = true, features = ["serde"] }  # Optional ruscrypto dep
lazy_static = { workspace = true } # Optional ruscrypto dep
rsa = { workspace = true, features = ["std", "pem"] }  # Optional ruscrypto dep
sha1 = { workspace = true, features = ["std"] }  # Optional ruscrypto dep
sha2 = { workspace = true, features = ["std"] }  # Optional ruscrypto dep
# This is exceptionally allowed since no significant changes
# were made from the last stable version to this major pre-release version.
# TODO: bump to a stable version.
x25519-dalek = { workspace = true, features = ["alloc", "zeroize", "precomputed-tables"] }  # Optional ruscrypto dep
crypto_secretbox = { workspace = true, features = ["alloc", "getrandom", "salsa20"] }  # Optional ruscrypto dep
# Cryptographic randomness is required for generating SecretKey, SigningKey and PrivateKey
# For SecretKey, we have `crypto_box` -> [...] -> `rand_core~=0.6` -> `getrandom~=0.2`
# For SingingKey&PrivateKey we have `<dalek stuff>` -> `rand~=0.5` -> `getrandom~=0.1`
# So we end up with two version of `getrandom` which have each they own way of
# configuring wasm-unknown-unknown web support (see [features] part).
getrandom_01 = { workspace = true }  # Optional ruscrypto dep
getrandom_02 = { workspace = true }  # Optional ruscrypto dep
# On top of that we need to have access to the two version of rand (0.7 and 0.8)
# to provide the randomness configuration to the crypto functions.
# rand 0.7 relies on rand_core~=0.5/getrandom~=0.1
rand_07 = { workspace = true, features = ["std"] }  # Optional ruscrypto dep
# rand 0.8 relies on rand_core~=0.6/getrandom~=0.2
rand_08 = { workspace = true, features = ["std", "std_rng"] }  # Optional ruscrypto dep

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["std", "unstable"] }
serde_test = { workspace = true }
hex-literal = { workspace = true }
rmp-serde = { workspace = true }
rstest = { workspace = true, features = ["async-timeout"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]

#
# RustCrypto stuff
#

getrandom_01 = { workspace = true, features = ["wasm-bindgen"] }  # Optional rustcrypto dep
getrandom_02 = { workspace = true, features = ["js"] }  # Optional rustcrypto dep
