[package]
name = "libparsec_openbao"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
libparsec_types = { workspace = true }
libparsec_platform_async = { workspace = true }

reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
data-encoding = { workspace = true, features = ["std"] }

[dev-dependencies]
libparsec_tests_lite = { workspace = true }
libparsec_tests_fixtures = { workspace = true, features = ["default"] }
sha2 = { version = "0.10.9", default-features = false }
