[package]
name = "libparsec_platform_filesystem"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# TODO Move to regular dependencies when progressing on #11954
log = { workspace = true }
# TODO Move to regular dependencies when progressing on #11954
libparsec_platform_async = { workspace = true }

wasm-bindgen-futures = { workspace = true, features = ["futures-core-03-stream"] }
web-sys = { workspace = true, features = [
    "DomException",
    "FileSystemDirectoryHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
    "FileSystemHandle",
    "FileSystemFileHandle",
    "FileSystemHandleKind",
    "Navigator",
    "StorageManager",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
] }

[dev-dependencies]
libparsec_tests_fixtures = { workspace = true, features = ["default"] }
libparsec_tests_lite = { workspace = true }
