[package]
name = "libparsec_platform_http_proxy"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libparsec_types = { workspace = true }

reqwest = { workspace = true, features = ["default-tls"] }
