[package]
name = "libparsec_platform_http_proxy"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
libparsec_types = { workspace = true }

reqwest = { workspace = true, features = ["default-tls"] }
